# cryoSBI

./: .gitignore  README.md  README.rst  config_file.json  environment.yml  hsp90_dimension_no_rot.ipynb  hsp90_rotations_code.py  hsp90_rotations_notebook.ipynb  hsp90_simple_notebook.ipynb  hsp90_train_posterior.py  hsp90_wrapper_not_rot.ipynb  hsp90_wrapper_with_rot.ipynb  hsp90_wrapper_with_rot_fourier.ipynb  hsp_90_notebook.ipynb  pyproject.toml  reqirements.txt  setup.py  setup.toml  tester2.ipynb
base_codes/: launch_gen_data_sbi.job  launch_train_post_sbi_cpu.job  launch_train_post_sbi_gpu.job  preprocess_data.py  recover_distributions.ipynb  sbi_generate_data.py  sbi_train_posterior.py
cluster/: hsp90_generate_data.py  launch_gen_data_sbi.job  launch_train_post_sbi_cpu.job  launch_train_post_sbi_gpu.job  sbi_generate_data.py  sbi_train_posterior_cpu.py  sbi_train_posterior_gpu.py
cryo_em_sbi/: __init__.py  cryo_em_sbi.py
example_codes/: config.json  launch_train_post_sbi_cpu.job  sbi_generate_data.py  sbi_train_posterior.py
example_config/: config_hsp90.json  config_square.json  sbi_train_posterior.py~
experiments/: nohup.out  prior_dist.ipynb
image_generator/: Makefile  README  environment.yml
messing_around/: animate.py  animation.ipynb  animation.py  image_anim.npy  image_params_snr01_128.json  quaternion_list.npy
notebooks/: Untitled.ipynb  ZCA_whitening.ipynb  analysis_all_particles.ipynb  analysis_model_missmatch.ipynb  analysis_nma.ipynb  analysis_nma_refurbed.ipynb  analysis_posterior_hsp90.ipynb  analysis_ratio_estimator.ipynb  analysis_reshaping.ipynb  cluster_3_indices.npy  cluster_analysis_images.ipynb  cryo_em_simulator.ipynb  fine_tune_posterior.ipynb  fine_tuning_loss  fine_tuning_loss2  free_energy_ratio_estimator.ipynb  hsp90_analysis.ipynb  image_params_mixed_training.json  micrograph_simulator.ipynb  model_missmatch_old.ipynb  noise_missmatch.py  plot_model_missmatch.ipynb  plots_hsp90.ipynb  power_spectrum.ipynb  quaternion_list.npy  simulator_colored_noise.py  single_particle_simulator.ipynb  test_gpu_simulation.ipynb  test_low_pass_filter.ipynb
production/: .gitignore
tests/: image_generator.ipynb  image_params_testing.json  test_embeddings.py  test_estimator_utils.py  test_image_generator.py  test_image_utils.py  (+7 more)
(+305 files in other folders)
