[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project]
name = "cryosbi"
authors = [
   { name = "David Silva-Sanchez", email = "david.silva@yale.edu"},
   { name = "Lars Dingeldein"},
   { name = "Pilar Cossio"},
   { name = "Roberto Covino"}
]
#description = "My package description"
#readme = "README.rst"
#requires-python = ">=3.7"
#keywords = ["one", "two"]
#license = {text = "BSD-3-Clause"}
#classifiers = [
#    "Framework :: Django",
#    "Programming Language :: Python :: 3",
#]

version = "0.2"
dependencies = [
    "lampe",
    "zuko",
    "torch",
    "numpy",
    "matplotlib",
    "scipy",
    "torchvision",
    "mrcfile"
]


